2010-08-03  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Xan Lopez.

        [GTK] Does not paint the node highlight used by the inspector
        https://bugs.webkit.org/show_bug.cgi?id=43429

        Implement highlighting the nodes when using the inspector.

        * WebCoreSupport/InspectorClientGtk.cpp:
        (WebKit::InspectorClient::highlight):
        (WebKit::InspectorClient::hideHighlight):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_expose_event):

Canonical link: https://commits.webkit.org/55389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64567 268f45cc-cd09-0410-ab3c-d52691b4dbfc